Finished JavaScript Overview

--- a/bibliography/bibliography.tex
+++ b/bibliography/bibliography.tex
@@ -26,6 +26,10 @@
 Charles F. Goldfarb,
 \emph{\href{http://www.sgmlsource.com/history/roots.htm}{The Roots of SGML -- A Personal Recollection}},  
 1996.
+\bibitem{rauschmayer14}
+Dr. Axel Rauschmayer,
+\emph{\href{http://speakingjs.com/es5/}{Speaking JavaScript -- An In-Depth Guide for Programmers (Free Online Version)}},  
+2014.
 \bibitem{pilgrim09}
 Mark Pilgrim,
 \emph{\href{http://diveintohtml5.info/index.html}{Dive Into HTML5}},  
