Finished CSS Overview. Added SVG package

--- a/bibliography/bibliography.tex
+++ b/bibliography/bibliography.tex
@@ -30,6 +30,18 @@ Charles F. Goldfarb,
 Dr. Axel Rauschmayer,
 \emph{\href{http://speakingjs.com/es5/}{Speaking JavaScript -- An In-Depth Guide for Programmers (Free Online Version)}},  
 2014.
+\bibitem{liebos99}
+Håkon Wium Lie and Bert Bos,
+\emph{\href{http://www.w3.org/Style/LieBos2e/history/Overview.html}{Cascading Style Sheets, designing for the Web}},  
+1999.
+\bibitem{w3c11}
+World Wide Web Consortium,
+\emph{\href{http://www.w3.org/html/logo/faq.html}{W3C HTML5 Logo FAQ}},  
+2011.
+
+
+
+
 \bibitem{pilgrim09}
 Mark Pilgrim,
 \emph{\href{http://diveintohtml5.info/index.html}{Dive Into HTML5}},  
