--- a/pfc.tex
+++ b/pfc.tex
@@ -46,6 +46,7 @@
 
 %%%%%% Import Packages %%%%%%
 \usepackage{graphicx}
+\usepackage{svg}
 \usepackage{subfig}
 \usepackage{epigraph}
 \usepackage{hyperref}
